--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@prisma/client": "^6.15.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.5",
@@ -22,22 +25,27 @@
     "@wisp-cms/client": "^0.0.22",
     "@wisp-cms/react-custom-component": "^0.0.1",
     "axios": "^1.7.9",
+    "better-auth": "^1.3.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.451.0",
     "next": "15.0.0",
     "node-html-parser": "^6.1.13",
+    "pg": "^8.16.3",
+    "prisma": "^6.15.0",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.62.0",
     "rss": "^1.2.2",
     "schema-dts": "^1.1.2",
     "slugify": "^1.6.6",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.3",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "url-join": "^5.0.0",
-    "zod": "^3.24.1"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
@@ -47,8 +55,6 @@
     "dotenv": "^16.4.5",
     "eslint": "^8",
     "eslint-config-next": "15.0.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
   "overrides": {
